Add package-lock.json and komendy.txt

--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/martucha17/nauka-gita/issues"
   },
-  "homepage": "https://github.com/martucha17/nauka-gita#readme"
+  "homepage": "https://github.com/martucha17/nauka-gita#readme",
+  "devDependencies": {
+    "autoprefixer-cli": "^1.0.0",
+    "browser-sync": "^2.26.13",
+    "html-validate": "^3.5.0"
+  }
 }
